--- a/present_sd_sis.Rmd
+++ b/present_sd_sis.Rmd
@@ -37,6 +37,11 @@ class: center, middle
 
 *We pencil marks on doorways to track our growth, and then our children’s growth. We want to change for the better, to know that we are moving toward our goals.*
 
+???
+
+- If we didn't change, there would be little need to measure.
+- Even in a habilitative context, there are changes in supports, preferences, personal priorities.
+
 ---
 class: center, middle
 
@@ -44,6 +49,12 @@ class: center, middle
 ## We are habitual. 
 
 *We fall into patterns, both beautiful and destructive. Math is the science of patterns and analyzing these can help us to understand ourselves.*
+
+???
+
+- A wise approach to working with populations balances hope for the future with a realistic look at the past.
+- If we know that people will continue to have similar clusters of concerns, how can be be forward thinking in preparing the provider network to meet their needs?
+- Example: people with aging parents.  What clusters of needs do they have and is the provider network equipped to provide for and coordinate those needs?
 
 ---
 class: center, middle
@@ -53,6 +64,11 @@ class: center, middle
 
 *We want to know the causes of things; how things fit together. We want our knowledge to be concrete, to be tangible.*
 
+???
+
+- We love stories, but we want to be able to multiply those stories to make needs tangible to legislators and others who allocate resources for supports and services
+- Not content with anecdotes alone, we seek other objective ways of understanding the impact of our lives' work
+
 ---
 class: center, middle
 
@@ -60,6 +76,10 @@ class: center, middle
 ## We are relational
 
 *We exist in context, in proportion. We share stories about our similar experiences. We want to measure ourselves against each other and against our own pasts.*
+
+???
+
+- Benchmarking, analysis of variance, clustering: any of these is just a fancy term for admitting that we understand ourselves in relationship to others.
 
 ---
 background-image: url(https://phys.org/newman/gfx/news/hires/2015/1-astronomerst.jpg)
@@ -75,10 +95,13 @@ class: inverse, center, middle
 - History of Assessment
 - Current psychosocial is often histories
 - Only measures have been in PT, OT
-- SIS moves field into a more sophisticated approach to assessment
+- SIS moves field into a more sophisticated approach to assessment, allowing real-world needs to be integrated into a structured assessment process
 
 ---
 class: inverse, center, middle
+background-image: url(https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSCimIGh2bXV7uYWnw_0cbwfVpoJXITfjKZM6KQBXaQ04cQFgXI)
+background-size: 150px
+background-position: 8% 90%
 
 > ### ...while a single glance may suffice 
 > ### for clinical diagnosis, if we hope to 
@@ -89,6 +112,16 @@ class: inverse, center, middle
 Oliver Sacks, *An Anthropologist on Mars*
 ]
 
+???
+
+- Quote from neurologist Oliver Sacks essays on autism
+
+Reality check: 
+- an assessment cannot encapsulate an entire person
+- Assessors role is an objective, point-in-time picture [viz: photograph]
+
+- Yet we must act to support people based on knowledge that is always partial, yet growing
+- Assessment should be practical and applied rather than put on a shelf
 
 ---
 class: inverse, center, middle
@@ -102,7 +135,8 @@ class: inverse, center, middle
 - Understanding is not enough if it is not used to help
 - Linking history/observation to action... 
 - Creates common language that frames history and helps to imagine a future for the person
-- Assessors role is an objective, point-in-time picture [viz: photograph]
+- Let's look at a few examples...
+
 
 ---
 
@@ -129,6 +163,8 @@ includes...
 ]
 
 ???
+
+- Core components of self-determination... and how data from the assessment might be used to complement these...
 
 ---
 
@@ -159,6 +195,53 @@ needs %>%
 
 
 ---
+class: center, middle
+
+## Data ~~Driven~~ Informed
+
+### *All models are wrong... some are useful.* 
+
+.pull-right[
+George Box
+]
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=3}
+library(ggplot2)
+
+d <- mtcars
+fit <- lm(mpg ~ hp, data = d)
+d$predicted <- predict(fit)   # Save the predicted values
+d$residuals <- residuals(fit) # Save the residual values
+
+ggplot(d, aes(x = hp, y = mpg)) +
+  geom_smooth(method = "lm", se = FALSE, color = "lightgrey") +
+  geom_segment(aes(xend = hp, yend = predicted), alpha = .2) +
+  # > Color adjustments made here...
+  geom_point(aes(color = abs(residuals))) + # Color mapped to abs(residuals)
+  scale_color_continuous(low = "black", high = "red") +  # Colors to use here
+  labs(x = "Measure A", y = "Measure B") +
+  guides(color = FALSE) +  # Color legend removed
+  geom_point(aes(y = predicted), shape = 1) +
+  theme_bw()
+
+```
+
+???
+
+- *All models are wrong*: a simplication of reality
+- How many of you have used a map?
+
+- The chart shows a simple generalization (linear model, depicted by line) of how a group of people (depicted by points) are related to each other based on scores across 2 measures (x-axis, y-axis)
+- Yet we can see that, while some individuals fit this generalization, some are farther away from it (marked in red)
+- Not all individuals fit into our ideas / preconceptions
+- BUT, using data is a way of keeping our ideas accountable to the facts
+
+- Would you rather draw a line at random, based on your own preconceptions?
+
+Residuals viz derived from: https://www.r-bloggers.com/visualising-residuals/
+
+---
+class: center, middle
 
 ## Data ~~Driven~~ Informed
 
@@ -168,26 +251,83 @@ The assessment does **not** prescribe:
 - Which supports should help meet these needs?
 - What setting should services be provided in?
 
-???
+--
 
-Compare 
-"All models are wrong, but some are useful" - George Box
-Residuals viz: https://www.r-bloggers.com/visualising-residuals/
-Not all individuals fit into our ideas / preconceptions
-BUT, using data is a way of keeping our ideas accountable to the facts
-
+*In short*: it is meant to be used **by** people, **not** instead of people
 
 ---
+class: inverse, center, middle
 
 # Practical Uses
-- This helps you do PCP better!
-- Identifying needs for individuals (e.g. potential referrals)
-- Mapping locations
+
+### Connecting to Person-Centered Planning
+```{r eval=require('DT'), echo=FALSE, message=FALSE, warning=FALSE, out.height=3}
+library(dplyr); library(DT); library(RColorBrewer)
+
+DT_in <- read.csv("df.csv")
+DT_in <- DT_in %>% select(-X)
+
+DT_in %>%
+  datatable(rownames = F,
+            colnames = c('Area','Need','Score','Type of Support','Frequency',
+                         'Daily Support Time','Important To/For'),
+            fillContainer = FALSE, 
+            extensions = 'Scroller',
+            options = list(dom = 't',
+                   deferRender = F,
+                   scrollY = 200,
+                   scroller = TRUE)) %>%
+  formatStyle('score', color = styleInterval(c(6), c("#800026","#ffffcc")),
+              backgroundColor = styleInterval(c(1:8), brewer.pal(9,"YlOrRd")))
+
+```
+
+???
+
+- Can focus on items endorsed by the person and their supports as important
+- Consider how closely these are aligned with scope, intensity, duration
+- Could use relevant areas to prompt consideration of potential referrals to PT, nursing, OT, etc.
 
 ---
+class: inverse, center, middle
 
-This is the ideal, now let's take time to understand where we are today:
-- Commence focus group
+# Practical Uses
+
+### Mapping locations
+```{r, echo=FALSE, message=FALSE, warning=FALSE, out.width='100%', fig.height=6, eval=require('leaflet')}
+library(leaflet); library(dplyr)
+
+lat <- rnorm(700, mean = 43.2, sd = 1)
+lon <- rnorm(700, mean = -84.5, sd = 0.4)
+geocoded <- data.frame(lat,lon) 
+
+leaflet() %>%
+  fitBounds(
+    lng1 = -86,  
+    lat1 = 44,
+    lng2 = -85,
+    lat2 = 42
+  ) %>%
+  addProviderTiles("CartoDB.Positron") %>%
+  addMarkers(
+    data = geocoded,
+    lat = ~lat, 
+    lng = ~lon,
+    clusterOptions = markerClusterOptions()
+  )
+
+```
+
+???
+
+- What if we could identify the geographic areas where people with a certain set of needs were clustered, so that we could build services to be more easily accessible to the people who need them?
+
+---
+class: inverse, center, middle
+
+# And... Focus
+
+### This is the ideal, now let's take time to understand where we are today
 
 ---
 background-image: url(http://www.tbdsolutions.com/wp-content/themes/tbdsolutions/images/logo.png)
